--- a/example/index.html
+++ b/example/index.html
@@ -121,13 +121,13 @@
 <p>「呃……我不確定。」</p>
 <p>「沒關係，我們晚點再來問你。其他人，你們打算做什麼？」</p>
 <p>丹起身。「那些哥布林躲進了陰影對吧？我能看見牠們嗎？」「乍看之下無法，你想把牠們找出來嗎？」「沒，我只是想知道牠們能不能做為我睡眠術的目標。我要驅動魔法之風，將其化作一道在整個房間內吹拂的沉靜夏日微風。」</p>
-<p>丹為他的<b>施放法術</b>動作擲骰以施放睡眠術。他的兩顆骰子總和為 6，加上他的+2 智力，總共為 8。他必須做出選擇。「你能夠感覺到法術從你手中釋放出去，這道魔法之風籠罩了哥布林的獻祭儀式。這個動作提供了一些選項，你打算選擇哪一個來維持這個法術？」</p>
+<p>丹為他的<b>施放法術</b>動作擲骰以施放睡眠術。他的兩顆骰子總和為 6，加上他的+2 智力，總共為 8。他必須做出選擇。「你能夠感覺到法術從你手中釋放出去，這道魔法之風籠罩了哥布林的儀式祭壇。這個動作提供了一些選項，你打算選擇哪一個來維持這個法術？」</p>
 <p>丹思考著他的選項。「我之後可能會需要讓更多的傢伙陷入沉睡。布莉安娜，妳能夠在我遇到麻煩時掩護我嗎？還是我應該選擇下次-1？」</p>
 <p>「當然，我可以掩護你。」班說道。</p>
 <p>「OK，那我要選擇遭遇危險的選項。」</p>
 <p>「好極了。」我說道：「那些哥布林戰士吸食了致幻氣體對吧？藥效調諧了牠們的感官：他們能夠微微感覺到那股魔法之風的存在，因此牠們現在全都衝向了你，而不是布莉安娜。你讓多少生物陷入了睡眠呢？」</p>
 <p>丹擲骰。「看起來只有一隻，該死。」</p>
-<p>「在哥布林們長時間的祈禱途中，大祭司因為你的魔法而倒在了地上。她的助手立刻開始搖晃她，將她叫醒。牠們都把注意力從白化鱷魚身上移開，而因為沒有人在揉摸牠的肚皮，白化鱷魚也不再滿足。不過在此同時，那些煙霧繚繞的哥布林戰士們，牠們正氣勢洶洶的向著拉瑟而來。」</p>
+<p>「在哥布林們長時間的祈禱途中，大祭司因為你的魔法而倒在了地上。她的助手立刻開始搖晃她，將她叫醒。牠們都把注意力從白化鱷魚身上移開，而因為再也沒有人繼續揉摸牠的肚皮，白化鱷魚也不再被滿足，開始躁動。不過在此同時，那些煙霧繚繞的哥布林戰士們，牠們正氣勢洶洶的向著拉瑟而來。」</p>
 <p>班加入了進來。「我佔到拉瑟和那群瘋狂哥布林們之間，讓自己成為一個顯眼的大目標，用一聲大喊吸引哥布林們的注意。」</p>
 <p>「這聽起來像是個<b>保衛</b>動作。」我說道。</p>
 <p>「沒問題，我骰出了 7，所以我獲得 1 掌握。」</p>
@@ -142,8 +142,8 @@
 <p>我先確認了一下哥布林的數據，接著回答：「是的，這一箭會殺死牠。而且因為妳射穿了牠的手臂，所以牠完全沒機會射擊。然而，另一名弓箭手還是朝著拉瑟射出飛箭，造成 2 點傷害。拉瑟，布莉安娜將你推到了一旁，你本來以為自己安全了，但在那一剎那，一支箭射中了你的腿，你打算怎麼辦？……事實上，先等一下，我們來看看歐瑪爾做了什麼。」</p>
 <p>艾薩克現在已經把事情好好想清楚了。「那個深沉沙啞的呼吸聲，我可以分辨出它是從哪裡傳來的嗎？它是像人類體型會發出的刺耳聲音、還是怪物尺寸的刺耳聲音？」</p>
 <p>「聽起來你打算試著藉由仔細傾聽來獲得一些情報，是吧？」我希望這麼說能提醒艾薩克有個動作能做到這件事，而不是直接要他進行動作。</p>
-<p>「喔對！所以我要<b>審視現狀</b>，盡我可能的保持靜默，試著捕捉任何細節以搞清楚這是什麼東西。加上我的睿知修正之後的結果是 7，呼。我應該要注意些什麼呢？」</p>
-<p>我花了點時間看了看我的筆記和地圖，確保我給了他所有的情報。「嗯，事實上，那的確不是哥布林。那些哥布林牠們略過了你，來到比你更靠近光亮的地方，準備在你朋友們的背後捅一刀，但卻沒有注意到你。而你所看見的，是一隻巨型鱷魚的吻部尖端頂在碎石堆上，那刺耳的聲音就是來自於牠。看樣子那頭白化鱷魚有個塊頭特別大的家人呢，牠的體型跟馬一樣大。如果你想要搬動石頭以從中掙脫，那牠幾乎肯定會聽見你的舉動。你打算怎麼辦呢？」</p>
+<p>「喔對！所以我要<b>審視現狀</b>，盡我可能的保持靜默，試著捕捉任何細節以搞清楚這是什麼東西。加上我的睿知修正之後的結果是 7，呼。我應該要注意到些什麼？」</p>
+<p>我花了點時間看了看我的筆記和地圖，確保我給了他所有的情報。「嗯，事實上，那的確不是哥布林。那些哥布林略過了你，來到比你更靠近光亮的地方，牠們正準備從你朋友們的背後捅刀，但並沒有注意到你。而你所看見的，是一頭吻部尖端頂在碎石堆上的巨型鱷魚，那刺耳的聲音就是來自於牠。看樣子那頭白化鱷魚有個塊頭特別大的家人呢，牠的體型跟馬一樣大。如果你想要搬動石頭以從中掙脫，那牠幾乎肯定會聽見你的舉動。你打算怎麼辦呢？」</p>
 <p>艾薩克沉思一會。「所以，我可以嘗試掙脫離開，但很有可能會<b>面對</b>發出聲音的<b>危險</b>。或者……我撕下斗篷的一角，並將它浸泡在我一整劑的黃金根毒藥裡。這是種需要服用後才能生效的毒藥，但如果我能在這頭巨大鱷魚吞下我之前，讓牠吞下這片布料，牠就會把我當成是一名可信賴的盟友，然後我就能利用牠去對付那些哥布林。」</p>
 <p>「沒問題！」這聽起來是個高風險的計畫，但並沒有瘋狂到無法執行。然而也是時候切換到其他人的場景了。「所以，歐瑪爾將斗篷的碎片浸泡在毒藥中，布莉安娜正被三隻吸嗨了的哥布林砍抓，諾拉留神注意著歐瑪爾的情況，有幾隻哥布林們潛匿在陰影中，一隻哥布林弓箭手站在祭壇旁，白化鱷魚醒轉起身，而拉瑟的膝蓋剛中了一箭。呼，拉瑟，你打算為這支箭做些什麼？」</p>
 
