--- a/gm/basics/index.html
+++ b/gm/basics/index.html
@@ -247,20 +247,20 @@
 <hr/>
 <h2>動作 (Moves)</h2>
 <p class="NoIndent">
-	當所有人都看向你，想知道接下來發生了什麼事情的時候，從這些動作中選擇一項。這裡列出的每個動作都是在遊戲中發生的某個故事情節──它們並不是什麼暗語或特殊術語。舉例來說，「消耗他們的資源」就如同其字面意義所示，代表著消耗角色們身上的資源。</p>
+	當所有人都看向你，想知道接下來發生了什麼事情的時候，從這些動作中選擇一項。這裡列出的每個動作都是某個在遊戲中發生的故事情節──它們並不是什麼暗語或特殊術語。舉例來說，「消耗他們的資源」就如同其字面意義所示，代表著角色們身上的資源被消耗。</p>
 <ul>
-	<li>使用一個怪物、危險、或地點動作 (Use a monster, danger, or location move)</li>
-	<li>揭露一個討厭的真相 (Reveal an unwelcome truth)</li>
-	<li>顯現出一個迫近威脅的跡象 (Show signs of an approaching threat)</li>
-	<li>造成傷害 (Deal damage)</li>
-	<li>消耗他們的資源 (Use up their resources)</li>
-	<li>把他們的動作反過來對付他們 (Turn their move back on them)</li>
-	<li>拆散他們 (Separate them)</li>
-	<li>給他們一個展現職業能力的機會 (Give an opportunity that fits a class’ abilities)</li>
-	<li>表現出他們職業、種族、或裝備的缺點 (Show a downside to their class, race, or equipment)</li>
-	<li>提供一個機會，可能伴隨著代價 (Offer an opportunity, with or without cost)</li>
-	<li>讓某人陷入窘境 (Put someone in a spot)</li>
-	<li>告訴他們某件事的條件或後果，並詢問 (Tell them the requirements or consequences and ask)</li></ul>
+	<li>使用一個怪物、危險、或地點動作</li>
+	<li>揭露一個討厭的真相</li>
+	<li>顯現出一個迫近威脅的跡象</li>
+	<li>造成傷害</li>
+	<li>消耗他們的資源</li>
+	<li>把他們的動作反過來對付他們</li>
+	<li>拆散他們</li>
+	<li>給他們展現職業能力的機會</li>
+	<li>表現出他們職業、種族、或裝備的缺點</li>
+	<li>提供機會，但可能伴隨代價</li>
+	<li>讓某人陷入窘境</li>
+	<li>告知後果與條件，並向他們確認</li></ul>
 <p class="NoIndent">
 	永遠不要說出你動作的名稱（這也是你的其中一個原則）。讓它成為真實發生的事情：「就在你閃躲龐大食人魔重重揮下的棍棒的同時，你腳步不慎一滑，狼狽落地。你的寶劍順勢滑落，消失在了黑暗中。你覺得你似乎看見了它掉落在什麼地方，但那頭食人魔正踏著笨重的腳步，緩緩向你逼近。你打算做什麼？」</p>
 <p>
@@ -269,86 +269,144 @@
 <h3>什麼時候該進行動作</h3>
 <p class="NoIndent">你進行動作的時機如下：</p>
 <ul>
-	<li>當所有人都看向你，想知道發生了什麼事時</li>
-	<li>當玩家們為你提供了一個絕佳機會時</li>
-	<li>當他們擲出了 6- 的結果時</li></ul>
+	<li>當所有人都看向你，想知道發生了什麼事</li>
+	<li>當玩家們為你提供了一個絕佳的黃金時機</li>
+	<li>當他們擲出了 6- 的結果</li></ul>
 
-<p class="NoIndent">Generally when the players are just looking at you to find out what happens you make a soft move, otherwise you make a hard move.</p>
-<p>A soft move is one without immediate, irrevocable consequences. That usually means it’s something not all that bad, like revealing that there’s more treasure if they can just find a way past the golem (offer an opportunity with cost). It can also mean that it’s something bad, but they have time to avoid it, like having the goblin archers loose their arrows (show signs of an approaching threat) with a chance for them to dodge out of danger.</p>
-<p>A soft move ignored becomes a golden opportunity for a hard move. If the players do nothing about the hail of arrows flying towards them it’s a golden opportunity to use the deal damage move.</p>
-<p>Hard moves, on the other hand, have immediate consequences. Dealing damage is almost always a hard move, since it means a loss of HP that won’t be recovered without some action from the players.</p>
-<p>When you have a chance to make a hard move you can opt for a soft one instead if it better fits the situation. Sometimes things just work out for the best.</p>
-<h3>Choosing a Move</h3>
-<p class="NoIndent">To choose a move, start by looking at the obvious consequences of the action that triggered it. If you already have an idea, think on it for a second to make sure it fits your agenda and principles and then do it. <strong>Let your moves snowball</strong>. Build on the success or failure of the characters’ moves and on your own previous moves.</p>
-<p>If your first instinct is that this won’t hurt them now, but it’ll come back to bite them later, great! That’s part of your principles (think offscreen too). Make a note of and reveal it when the time is right.</p>
-<h3>Making your Move</h3>
-<p class="NoIndent">When making a move, keep your principles in mind. In particular, never speak the name of your move and address the characters, not the players. Your moves are not mechanical actions happening around the table. They are concrete events happening to the characters in the fictional world you are describing.</p>
-<p>Note that “deal damage” is a move, but other moves may include damage as well. When an ogre flings you against a wall you take damage as surely as if he had smashed you with his fists.</p>
-<p>After every move you make, always ask “What do you do?”</p>
-<h4>Use a monster, danger, or location move</h4>
-<p class="NoIndent">Every monster in an adventure has moves associated with it, as do many locations. A monster or location move is just a description of what that location or monster does, maybe “hurl someone away” or “bridge the planes.” If a player move (like hack and slash) says that a monster gets to make an attack, make an aggressive move with that monster.</p>
-<p>The overarching dangers of the adventure also have moves associated with them. Use these moves to bring that danger into play, which may mean more monsters.</p>
-<h4>Reveal an unwelcome truth</h4>
-<p class="NoIndent">An unwelcome truth is a fact the players wish wasn’t true: that the room’s been trapped, maybe, or that the helpful goblin is actually a spy. Reveal to the players just how much trouble they’re in.</p>
-<h4>Show signs of an approaching threat</h4>
-<p class="NoIndent">This is one of your most versatile moves. “Threat” means anything bad that’s on the way. With this move, you just show them that something’s going to happen unless they do something about it.</p>
-<h4>Deal damage</h4>
-<p class="NoIndent">When you deal damage, choose one source of damage that’s fictionally threatening a character and apply it. In combat with a lizard man? It stabs you. Triggered a trap? Rocks fall on you.</p>
-<p>The amount of damage is decided by the source. In some cases, this move might involve trading damage both ways, with the character also dealing damage.</p>
-<p>Most damage is based on a die roll. When a player takes damage, tell them what to roll. You never need to touch the dice. If the player is too cowardly to find out their own fate, they can ask another player to roll for them.</p>
-<h4>Use up their resources</h4>
-<p class="NoIndent">Surviving in a dungeon, or anywhere dangerous, often comes down to supplies. With this move, something happens to use up some resource: weapons, armor, healing, ongoing spells. You don’t always have to use it up permanently. A sword might just be flung to the other side of the room, not shattered.</p>
-<h4>Turn Their Move Back On Them</h4>
-<p class="NoIndent">Think about the benefits a move might grant a character and turn them around in a negative way. Alternately, grant the same advantage to someone who has it out for the characters. If Ivy has learned of Duke Horst’s men approaching from the east, maybe a scout has spotted her, too.</p>
-<h4>Separate Them</h4>
-<p class="NoIndent">There are few things worse than being in the middle of a raging battle with blood-thirsty owlbears on all sides—one of those things is being in the middle of that battle with no one at your back.</p>
-<p>Separating the characters can mean anything from being pushed apart in the heat of battle to being teleported to the far end of the dungeon. Whatever way it occurs, it’s bound to cause problems.</p>
-<h4>Give an opportunity that fits a class’ abilities</h4>
-<p class="NoIndent">The thief disables traps, sneaks, and picks locks. The cleric deals with the divine and the dead. Every class has things that they shine at—present an opportunity that plays to what one class shines at.</p>
-<p>It doesn’t have to be a class that’s in play right now though. Sometimes a locked door stands between you and treasure and there’s no thief in sight. This is an invitation for invention, bargaining, and creativity. If all you’ve got is a bloody axe doesn’t every problem look like a skull?</p>
-<h4>Show a downside to their class, race, or equipment</h4>
-<p class="NoIndent">Just as every class shines, they all have their weaknesses too. Do orcs have a special thirst for elven blood? Is the cleric’s magic disturbing dangerous forces? The torch that lights the way also draws attention from eyes in the dark.</p>
-<h4>Offer an opportunity, with or without cost</h4>
-<p class="NoIndent">Show them something they want: riches, power, glory. If you want, you can associate some cost with it too, of course.</p>
-<p>Remember to lead with the fiction. You don’t say, “This area isn’t dangerous so you can make camp here, if you’re willing to take the time.” You make it a solid fictional thing and say, “Helferth’s blessings still hang around the shattered altar. It’s a nice safe spot, but the chanting from the ritual chamber is getting louder. What do you do?”</p>
-<h4>Put someone in a spot</h4>
-<p class="NoIndent">A spot is someplace where a character needs to make tough choices. Put them, or something they care about, in the path of destruction. The harder the choice, the tougher the spot.</p>
-<h4>Tell them the requirements or consequences and ask</h4>
-<p class="NoIndent">This move is particularly good when they want something that’s not covered by a move, or they’ve failed a move. They can do it, sure, but they’ll have to pay the price. Or, they can do it, but there will be consequences. Maybe they can swim through the shark-infested moat before being devoured, but they’ll need a distraction. Of course, this is made clear to the characters, not just the players: the sharks are in a starved frenzy, for example.</p>
+<p class="NoIndent">通常來說，當玩家們只是看向你並希望知道發生了什麼事情時，你進行一個軟動作（Soft move），除此之外的情況，你進行一個硬動作（Hard move）。</p>
+<p>軟動作 是一個沒有立即性、且不會導致不可挽回後果的動作。這通常意味著情況並沒有那麼糟糕。舉例來說，揭露出他們只要能找到繞過魔像的途徑就能得到更多寶藏的事實，就是一個軟動作（<u>提供機會，但可能伴隨代價</u>）。這也可能意味著某個糟糕的情況，但他們仍有時間反應以避免它發生，比如說讓哥布林弓箭手射出箭矢（<u>顯現出一個迫近威脅的跡象</u>），但仍給他們一個閃躲避開危險的機會。</p>
+<p>
+	一個被忽視不管的軟動作將會演變成進行硬動作的黃金時機。倘若玩家們面對飛襲而至的箭雨卻不採取任何行動，那麼這就會是你進行<u>造成傷害</u>這個動作的絕佳機會。</p>
+<p>
+	另一方面，硬動作 會帶來立即性的後果。<u>造成傷害</u>幾乎永遠會是一個硬動作，因為它代表著生命值的減少，且直到玩家們採取某些行動之前都不會恢復。</p>
+<p>
+	當你有機會進行硬動作時，你也可以改為選擇進行一個更符合當下情境的軟動作。畢竟，有時候事情就是會朝著好的方向發展。</p>
+
+<h3>選擇動作</h3>
+<p class="NoIndent">
+	當你需要選擇動作來進行時，首先看看故事中觸發它的行為最可能導致什麼樣的後果。若你心中已經有了個好點子，那麼暫停並思考一下，先確定它符合你的目標事項和原則，然後再執行它。<strong>讓你的動作如滾雪球般累積</strong>。讓它們建立在角色們成功或失敗的動作上，也建立在你自己之前進行過的動作上。</p>
+<p>
+	若你的直覺反應是：這現在不會傷害到他們，但會在之後反咬他們一口。好極了！這正是你的原則之一（<u>也要記得思考幕後</u>）。將它紀錄下來，並在恰當的時機揭露它們。</p>
+
+<h3>進行你的動作</h3>
+<p class="NoIndent">
+	在你進行動作的同時，把你的原則謹記在心。尤其是「永遠不要說出你動作的名字」和「對角色說話，而非對玩家」。你的動作並不是那種發生在遊戲桌上的機制性行動，而是發生在你們所描繪的故事世界中，衝著角色們而來的具體事件。</p>
+<p>
+	要注意，儘管「造成傷害」本身是一個動作，但其他動作也可能會包含造成傷害的後果。當一頭食人魔把你狠狠扔到牆上時，就跟牠用重拳揍你一樣，你肯定也會因此受到傷害。</p>
+<p>每當你進行一個動作後，永遠記得要詢問：「你打算做什麼？」</p>
+
+<h4>使用一個怪物、危險、或地點動作</h4>
+<p class="NoIndent">
+	冒險中的每一頭怪物都有著其關連的動作，許多地點也是如此。怪物或地點動作通常只會是一段關於該怪物或地點所作所為的描述，比如說「把某人扔擲出去」或「通往異位面」等等。若某個玩家動作（比如說<strong>砍劈</strong>動作）寫說怪物能夠進行一次攻擊，則你讓該怪物採取一個相應的攻擊性動作。</p>
+<p>
+	冒險中最首要的危險也可能會有著其關聯的動作。使用這些動作來把危險帶到遊戲之中，這可能也意味著會出現更多的怪物。</p>
+
+<h4>揭露一個討厭的真相</h4>
+<p class="NoIndent">
+	討厭的真相 代表著一個玩家們不希望它是事實的真相：這或許是發現他們被困在房間內、或者那隻樂於助人的哥布林其實是個狡猾的間諜。向玩家們揭示他們究竟陷入了多大的麻煩之中。</p>
+
+<h4>顯現出一個迫近威脅的跡象</h4>
+<p class="NoIndent">
+	這是你最萬用的動作之一。這裡所指的「威脅」可以是任何即將發生的壞事。利用這個動作，你就是在告訴他們：如果他們不做點什麼的話，就會有不好的事情發生。</p>
+
+<h4>造成傷害</h4>
+<p class="NoIndent">
+	當你造成傷害時，選擇一個在故事中會對角色造成威脅的傷害源並應用之。正在跟一頭蜥蜴人搏鬥？那也許牠捅了你一刀。觸發了陷阱？那或許從天而降的巨石向你砸下。</p>
+<p>
+	你所造成的傷害量將取決於傷害源。在某些情況下，這個動作可能會導致雙方互相傷害，讓角色也能對傷害源造成傷害。</p>
+<p>
+	大部分的傷害都是透過擲骰決定。當玩家受到傷害時，告訴他們該擲什麼。你永遠不需要去碰骰子。如果玩家不敢親手決定自己的命運，那他們可以請另一名玩家代替他們擲骰。</p>
+
+<h4>消耗他們的資源</h4>
+<p class="NoIndent">
+	當在地城或任何危險的場所求生時，往往需要依靠補給。利用這個動作，你告訴他們發生了什麼事並因此消耗掉一些資源：這些資源也許是武器、防具、治療、或是持續性法術。你並不需要總是讓這些資源被永久消耗，比如說，你可以只是讓長劍被擊飛到房間的另一端，而不是讓它被粉碎。</p>
+
+<h4>把他們的動作反過來對付他們</h4>
+<p class="NoIndent">
+	思考某個動作可能會帶給角色什麼好處，然後將它以負面的方式扭轉過來，或者，把同樣的優勢賦予某個與角色們做對的傢伙。如果艾薇得知了霍斯特公爵的手下正在從東邊逼近，那或許其中一名斥候也同樣發現了她。</p>
+
+<h4>拆散他們</h4>
+<p class="NoIndent">
+	很少有情況會比在一群嗜血梟熊的團團包圍下展開激烈廝殺還要更糟糕的了──而在獨自一人，孤立無援的情況下深陷這類戰鬥，就正是其中一種。</p>
+<p>
+	將角色們拆散可以代表許多事，也許是激烈酣戰中被分隔開來、或是不幸被傳送到地城中的遙遠彼端。無論這個情況是以什麼方式發生，它都必定會引發某些問題。</p>
+
+<h4>給他們展現職業能力的機會</h4>
+<p class="NoIndent">
+	盜賊擅長解除陷阱、潛行、和開鎖，而牧師負責與聖者和不死生物打交道。每個職業都有著他們擅長的事物──提供機會讓某個職業能發揮所長，給他一個專屬於他的閃耀時刻。</p>
+<p>
+	這個機會並不非得要提供給在遊戲中出現的職業。有時候，當一道門鎖就這麼擋在你們和寶藏之間，但隊伍中卻可能連一個盜賊都沒有。這種情況同時也是在邀請玩家們展現創意、談判議價、或發揮創造力。如果你全身上下只有一把染血巨斧，所有難題豈不都像個欠砍的頭骨？</p>
+
+<h4>表現出他們職業、種族、或裝備的缺點</h4>
+<p class="NoIndent">
+	正如每個職業都有其出眾耀眼之處，他們也都有自己的弱點。那些獸人是否特別渴望精靈的鮮血？牧師的神術是否會擾動某個危險的勢力？而火炬那照亮路途的光芒，也可能會在黑暗中引來不必要的注意。</p>
+
+<h4>提供機會，但可能伴隨代價</h4>
+<p class="NoIndent">
+	向他們展示某個他們渴望的事物：財富、權力、榮耀。當然，若你希望，你也可以為其附上一些代價。</p>
+<p>
+	記得永遠以敘事開頭。你並不會說：「這個區域並不危險，所以如果你們願意花點時間的話，你們可以在這裡紮營。」。你必須讓它成為一個牢固的故事情境，並說：「赫爾佛司的祝福仍然殘留在這個殘破祭壇的周圍。這是個安全的好地方，然而在這同時，來自儀式大廳的吟唱聲也變得越來越響亮。你們打算做什麼？」</p>
+
+<h4>讓某人陷入窘境</h4>
+<p class="NoIndent">
+	陷入窘境意味著角色必須做出艱難的抉擇。把他們自己、或他們關心的事物放在毀滅的道路上。這個抉擇越艱難，情境也就越窘困。</p>
+
+<h4>告知後果與條件，並向他們確認</h4>
+<p class="NoIndent">
+	這個動作特別適合在角色們想要某個不被任何動作涵蓋的事物、或是當他們在動作中失敗的時候使用。他們當然可以這麼做，但他們必須先為此支付一些代價。或者，他們可以這麼做，但這麼做將會帶來某些後果。或許他們打算跳進飼養著鯊魚的護城河，並趕在被吃掉之前游到對岸，但他們必須先分散這些鯊魚的注意力才能這麼做。當然，你必須讓角色們也清楚知道這一點，而不僅僅是告知玩家：比如說，告訴他們這些鯊魚正處於飢餓導致的瘋狂狀態，而牠們不可能放過任何膽敢貿然跳下的餌食。</p>
 
 <hr/>
 <h2>地城動作 (Dungeon Moves)</h2>
-<p class="NoIndent">Dungeon Moves are a special subset that are used to make or alter a dungeon on the fly. Use these if your players are exploring a hostile area that you don’t already have planned completely.</p>
-<p>Map out the area being explored as you make these moves. Most of them will require you to add a new room or element to your map.</p>
-<ul><li>Change the environment</li>
-<li>Point to a looming threat</li>
-<li>Introduce a new faction or type of creature</li>
-<li>Use a threat from an existing faction or type of creature</li>
-<li>Make them backtrack</li>
-<li>Present riches at a price</li>
-<li>Present a challenge to one of the characters</li></ul>
-<p class="NoIndent">You can make these moves whenever everyone looks to you to say something, when the players present you an opportunity, or when the players miss on a roll. They’re particularly well-suited for when the characters enter a new room or hallway and want to know what they find there.</p>
-<h4>Change the environment</h4>
-<p class="NoIndent">The environment is the general feel of the area the players are in: carved tunnels, warped trees, safe trails, or whatever else. This is your opportunity to introduce them to a new environment: the tunnels gradually become naturally carved, the trees are dead and strange, or the trails are lost and the wilderness takes over. Use this move to vary the types of areas and creatures the players will face.</p> 
-<h4>Point to a looming threat</h4>
-<p class="NoIndent">If you know that something is lurking and waiting for the players to stumble upon it, this move shows them the signs and clues. This move is the dragon’s footprints in the mud or the slimy trail of the gelatinous cube.</p>
-<h4>Introduce a new faction or type of creature</h4>
-<p class="NoIndent">A type of creature is a broad grouping: orcs, goblins, lizardmen, the undead, etc.</p>
-<p>A faction is a group of creatures united by a similar goal. Once you introduce them you can begin to make moves and cause trouble for the players with those creatures or NPCs.</p>
-<p>Introducing means giving some clear sensory evidence or substantiated information. Don’t be coy; the players should have some idea what you’re showing the presence of. You can, however, be subtle in your approach. No need to have the cultist overlord waving a placard and screaming in the infernal tongue every single time.</p>
-<p>A hard application of this move will snowball directly into a combat scene or ambush.</p>
-<h4>Use a threat from an existing faction or type of creature</h4>
-<p class="NoIndent">Once the characters have been introduced to the presence of a faction or type of creature you can use moves of monsters of that type.</p>
-<p>Use the factions and types broadly. Orcs are accompanied with their hunting worgs. A mad cult probably has some undead servants or maybe a few beasts summoned from the abyssal pits. This is a move that, often, you’ll be making subconsciously—it’s just implementing the tools you’ve set out for yourself in a clear and effective manner.</p>
-<h4>Make them backtrack</h4>
+<p class="NoIndent">
+	地城動作是一組特殊的動作子集，用來在遊戲過程中創造或改變地城。在你的玩家們探索一個你尚未做好完全準備的危險區域時使用這些動作。</p>
+<p>
+	在你進行這些動作的同時，畫出那些已經被探索的區域。這些動作大多會要求你把一個新的房間或新元素添加到你們的地圖上。</p>
+<ul>
+	<li>改變環境</li>
+	<li>指向迫近的威脅</li>
+	<li>讓新的集團或生物類型進場</li>
+	<li>使用來自現有集團或生物類型的威脅</li>
+	<li>讓他們折返</li>
+	<li>呈現出有代價的財富</li>
+	<li>對其中一個角色發起挑戰</li></ul>
+<p class="NoIndent">
+	每當所有人都看向你並希望你說些什麼、當玩家們給了你一個絕佳的機會、或當玩家們在擲骰中失敗時，就是你使用這些動作的時機。它們特別適合用在角色們走進一個新房間或走廊，並希望知道他們將在那裡發現什麼的時候。</p>
+
+<h4>改變環境</h4>
+<p class="NoIndent">
+	環境泛指玩家們所處區域的整體氛圍：雕刻而成的隧道、扭曲的樹木、安全的小徑、或任何其他事物。這個動作將提供你一個把他們引入新環境的機會：或許隧道逐漸過度成了天然形塑的風貌、或許周遭樹木變得枯亡而詭譎、又或者羊腸小徑終於消失，而一大片荒野隨即取而代之。利用這個動作去改變玩家們將要面對的地區場所和生物類型。</p> 
+
+<h4>指向迫近的威脅</h4>
+<p class="NoIndent">
+	如果你知道這裡有某種東西正潛伏著，等待著玩家們偶然撞見它，那麼這個動作將會提供他們一些跡象和線索。這個動作可能會是巨龍在泥濘地中留下的腳印、也可能是凝膠方塊遺留在身後的黏滑痕跡。</p>
+
+<h4>讓新的集團或生物類型進場</h4>
+<p class="NoIndent">
+	生物類型代表著一種涵蓋範圍相當廣泛的分組：像是獸人、哥布林、蜥蜴人、不死生物等等。</p>
+<p>
+	集團則代表著一群因為共同目標而集結在一起的生物群體。一旦你讓他們進到故事中，你就可以開始利用這些生物或NPC來進行動作，並為玩家們帶來各種各樣的麻煩。</p>
+<p>
+	讓集團或生物進場，意味著你得為其提供一些清晰的感官證據或充分的情報。不要含糊其詞；你應該要讓玩家們能理解你展現出的是什麼樣的存在。然而，你仍然可以使用比較巧妙的手法。沒有必要讓那個邪教頭頭在每次出場時都揮舞著告示牌，並用煉獄語厲聲尖叫著宣揚自己的存在。</p>
+<p>
+	這個動作的強硬版本（硬動作）可能會產生滾雪球效應，直接導致戰鬥場景或伏擊的發生。</p>
+
+<h4>使用來自現有集團或生物類型的威脅</h4>
+<p class="NoIndent">
+	一旦角色們已經被告知了某個集團或某種生物類型的存在，你就可以開始使用這些怪物的動作了。</p>
+<p>
+	盡量廣泛地運用集團和生物類型。獸人們可以率領著牠們的座狼展開狩獵。一名瘋狂的邪教徒也許控制著一些不死僕從、或甚至可能召喚出了幾頭來自地獄深淵的狂暴魔獸。這是個你可能經常會下意識使用的動作──這裡只不過是以一種明確而有效的方式來實現這個你為自己準備的工具。</p>
+
+<h4>讓他們折返 (Make them backtrack)</h4>
 <p class="NoIndent">Look back at the spaces you’ve added to the map. Is there anything useful there as yet undiscovered? Can you add a new obstacle that can only be overcome by going back there? Is there a locked door here and now whose key lies in an earlier room?</p>
 <p>When backtracking, show the effect that time has had on the areas they’ve left behind. What new threats have sprung up in their wake? What didn’t they take care of that’s waiting for their return?</p>
 <p>Use this move the make the dungeon a living, breathing place. There is no stasis in the wake of the characters’ passing. Add reinforcements, cave in walls, cause chaos. The dungeon evolves in the wake of the characters’ actions.</p>
-<h4>Present riches at a price</h4>
+
+<h4>展示有代價的財富 (Present riches at a price)</h4>
 <p class="NoIndent">What do the players want? What would they sacrifice for it?</p>
 <p>Put some desirable item just out of reach. Find something they’re short on: time, HP, gear, whatever. Find a way to make what they want available if they give up what they have.</p>
 <p>The simplest way to use this move is the promise of gold out of the way of the main objective. Will they stop to pry the ruby eyes from the idol when they know that the sacrifice looms closer and closer? Use this move and you can find out.</p>
-<h4>Present a challenge to one of the characters</h4>
+
+<h4>對其中一個角色發起挑戰 (Present a challenge to one of the characters)</h4>
 <p class="NoIndent">Challenge a character by looking at what they’re good at. Give the thief a lock to pick, show the cleric servants of an enemy god to battle against. Give the wizard magical mysteries to investigate. Show the fighter some skulls to crack. Give someone a chance to shine.</p>
 <p>As an alternative, challenge a character by looking at what they’re bad at or what they’ve left unresolved. If the bard has a complicated lie on his conscience, what steps will he take to cover it up when someone figures him out? If the wizard has been summoning demons, what happens when word gets out?</p>
 <p>This move can give a character the spotlight—even if just for a moment. Try to give everyone a chance to be the focus of play using this move from session to session.</p>
