--- a/gm/fronts/index.html
+++ b/gm/fronts/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>Fronts | 地城世界 HTML SRD</title>
+  <title>前置 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -110,8 +110,8 @@
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
              
-<h1>Fronts</h1>
-<p class="NoIndent">Fronts are secret tomes of GM knowledge. Each is a collection of linked dangers—threats to the characters specifically and to the people, places, and things the characters care about. It also includes one or more impending dooms, the horrible things that will happen without the characters’ intervention. “Fronts” comes, of course, from “fighting on two fronts” which is just where you want the characters to be—surrounded by threats, danger and adventure.</p>
+<h1>前置 (Fronts)</h1>
+<p class="NoIndent">前置 是記載著GM知識情報的秘密典籍。每一個前置都是一系列危險的集合──它們是特別針對角色們的威脅，並同樣危害著角色們所關心的人們、地點、以及事物。它同時也包括了一個或多個逼近而至的災厄，代表著若角色們不加以阻止就會降臨的可怕慘事。「前置」源自英文中的「戰線（fronts）」一詞，代表你想讓角色們面對的處境──被你預先擺放的威脅、危險和冒險給環繞。</p>
 <p>Fronts are built outside of active play. They’re the solo fun that you get to have between games—rubbing your hands and cackling evilly to yourself as you craft the foes with which to challenge your PCs. You may tweak or adjust your fronts during play (who knows when inspiration will strike?) but the meat of them comes from preparation between sessions.</p>
 <p>Fronts are designed to help you organize your thoughts on what opposes the players. They’re here to contain your notes, ideas, and plans for these opposing forces. When you’re in a bind your fronts are where you’re going to turn and say, “Oh, so <em>that’s</em> what I should do.” Consider them an organizational tool, as inspiration for present and future mayhem.</p>
 <p>When you’re building fronts, think about all the creepy dungeon denizens, the rampaging hordes and ancient cults that you’d like to see in your game. Think in broad strokes at first and then, as you build dangers into your fronts, you’ll be able to narrow those ideas down. When you write your campaign front, think about session-to-session trends. When you write your adventure fronts, think about what’s important right here and right now. When you’re done writing a few fronts you’ll be equipped with all the tools you’ll need to challenge your players and ready to run Dungeon World.</p>
