--- a/playing_the_game/index.html
+++ b/playing_the_game/index.html
@@ -178,19 +178,19 @@
 
 <h4><b>有些動作……</b></h4>
 <ul class="List">
-<li><b>…寫著「造成傷害」。</b>
+<li><b style="color:#0220b5">…寫著「造成傷害」。</b>
 	造成傷害代表你使用你職業的傷害骰進行擲骰；有時候，你的武器也會為傷害骰提供加值或減值。任何時候當你做出了能夠合理地傷害到目標的攻擊時，你使用你的傷害骰以決定造成的傷害。通常來說這代表著你正揮舞武器發動攻擊，但若經過充分訓練、或在某些有趣的特殊情況下，你也可能僅憑赤手空拳就造成傷害。</li>
-<li><b>…寫著「下次+1」。</b>
+<li><b style="color:#0220b5">…寫著「下次+1」。</b>
 	代表你在下一次為動作擲骰（傷害骰除外）時，你將獲得+1 的加值。這個加值可以是大於+1 的數值，也可能甚至是-1 之類的減值。有時候這個加值會限定它所能適用的情境，例如「砍劈獲得下次+1」，意味著這個加值只會在你下次為砍劈動作擲骰時才會適用，而不會應用於其他動作。</li>
-<li><b>…寫著「持續+1」。</b>
+<li><b style="color:#0220b5">…寫著「持續+1」。</b>
 	代表你在接下來為所有動作擲骰（傷害骰除外）時，都將獲得+1 的加值。這個加值可以是大於+1 的數值，也可能甚至是-1 之類的減值。有時候這個加值會限定它所能適用的情境，例如「射擊獲得持續+1」。持續的加值也會言明它的結束條件，像是「直到你把該法術解消」或「直到你向你的神明贖罪」。</li>
-<li><b>…會給你「掌握」。</b>
+<li><b style="color:#0220b5">…會給你「掌握」。</b>
 	「掌握」就像是一種貨幣，讓你在這之後可以決定是否要按照該動作的說明，藉由消耗「掌握」來發揮某些效果。因某個動作而產生的「掌握」永遠只能被用於該動作上；舉例來說，你不能把你在保衛動作中獲得的「掌握」用在陷阱專家動作上，反之亦然。</li>
-<li><b>…要你進行選擇。</b>
+<li><b style="color:#0220b5">…要你進行選擇。</b>
 	就跟所有動作的效果一樣，你所做出的選擇除了遊戲機制層面的影響之外，也代表著故事中所發生的事情。舉例來說，當你在砍劈動作中擲出10+的結果，並選擇了將自己暴露在敵人攻擊以造成更多傷害，這個選擇也正是發生在你角色身上的事情：他在這次的行動中佔盡優勢，他甚至有餘裕去選擇要保持安全、還是要冒險挑戰極限。</li>
-<li><b>…給你機會述說關於你角色的事情和過往。</b>
+<li><b style="color:#0220b5">…給你機會述說關於你角色的事情和過往。</b>
 	當你在憶述見聞時，你可能會被問到為什麼你的角色知道GM所揭曉的這些資訊。把握這個機會為遊戲添加細節，展現你的角色究竟是什麼樣的人。你只需要謹記那些已經被確定的情報，並小心不要違反任何已經被描寫的事實。</li>
-<li><b>…寫著「標記經驗值」。</b>
+<li><b style="color:#0220b5">…寫著「標記經驗值」。</b>
 	代表你獲得 1 點經驗值，將其加到你當前的經驗值總和中。</li>
 </ul>
 <hr/>
